fix top hole at scroll up + fix page jump when burger open

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -126,7 +126,7 @@ figure
 
     &.fixed-menu
         // padding-top: 60px
-        padding-top: 113px
+        //padding-top: 113px
 
     .main-content
 
